right align last column and fix more styling

--- a/styles/main.css
+++ b/styles/main.css
@@ -55,3 +55,21 @@ button.circle {
   height: 50px;
   width: 50px;
 }
+form {
+  color: #000;
+  padding: 20px;
+  font-family: 'Roboto', Times, serif;
+}
+form th {
+  color: #c9d3e0;
+}
+form td input {
+  background-color: #f4f7fb;
+  border-radius: 5px;
+}
+form td:last-child input {
+  text-align: right;
+}
+content {
+  background-color: #f4f7fb;
+}
